2005-08-03  Francois Dumont  <dums@stlport...>

	* INSTALL document updated to signal no longer support of the
	'wrapper' mode.

2005-08-02  Petr Ovtchenkov  <ptr@island...>

	* stlport/stl_user_config.h, stlport/stl/_site_config.h:
	fix some obsolete comments.

2005-07-31  Petr Ovtchenkov  <ptr@island...>

	* test/unit/math_aux.h, cmath_test.cpp: are_equals moved into
	math_aux.h to reuse in other tests.

	* test/unit/sstream_test.cpp: check input to float, inspired by
	Jeff Williams.

2005-07-27  Francois Dumont  <dums@stlport...>

	* stlport/iomanip, stl/_algo.h: Removed some persistent occurences
	of __in and __out keywords reserved by Microsoft.

	* stlport/stl/_pthread_alloc.c: Fix annoying warning reported by gcc.

	* stlport/config/stl_msvc.h: Fix _STLP_VENDOR_UNEXPECTED_STD macro
	definition to empty rather than '1'. Could have produce a compilation
	error with compilers like Intel C++ used with the VC6 native Standard
	library.

	* stlport/queue, stl/_ctraits_fns.h, _hashtable.h, _numeric.h, _string.h
	_tree.h: Fix macro guards used to avoid inclusion of _function.h or 
	_function_base.h or functional thanks Dinesh Monga report.

2005-07-26  Petr Ovtchenkov  <ptr@island...>

	* doc/FAQ: description of pseudo-leaks, thanks Michael Fink.

	* STLport (repository): STLport 5.0 RC4

2005-07-25  Francois Dumont  <dums@stlport...>

	* stlport/config/stl_evc.h: Move _DEBUG definition fix up before
	stl_msvc.h inclusion to have correct library link automatically.
	Thanks Michael Fink.

2005-07-24  Francois Dumont  <dums@stlport...>

	* stlport/stl/_string.c, _rope.c: Add instanciation of npos for all
	compilers thanks Simon.

	* test/unit/string_test.cpp: Add creation of a reference to string::npos
	to force compiler to generate memory for it. Used to reveal a link error.

	* test/unit/cppunit/cppunit_mini.h: Removed redondant semi column in 
	CPPUNIT_TEST_SUITE_REGISTRATION macro definition.

	* stlport/config/stl_msvc.h, stl_intel.h: Concidering that compilers