@@ -23,26 +23,41 @@
 
 // if the macro is on, the header is already there
 # ifndef setjmp
-# if defined (_STLP_USE_NEW_C_HEADERS)
-#  include _STLP_NATIVE_CPP_C_HEADER(csetjmp)
-# else
-#  include _STLP_NATIVE_C_HEADER(setjmp.h)
-# endif
+#  if defined (_STLP_USE_NEW_C_HEADERS)
+#   include _STLP_NATIVE_CPP_C_HEADER(csetjmp)
+#  else
+#   define _STLP_NATIVE_SETJMP_H_INCLUDED
+#   include _STLP_NATIVE_C_HEADER(setjmp.h)
+#  endif
 # endif
 
 # ifdef _STLP_IMPORT_VENDOR_CSTD
 _STLP_BEGIN_NAMESPACE
+#  ifndef _STLP_NATIVE_SETJMP_H_INCLUDED
 using _STLP_VENDOR_CSTD::jmp_buf;
-# ifndef _STLP_NO_CSTD_FUNCTION_IMPORTS
-#  ifndef setjmp
-#   if !defined(__MSL__) || ((__MSL__ > 0x7001) && (__MSL__ < 0x8000))
+#  else
+// if setjmp.h was included first, this is in global namespace, not in
+// vendor's std.  - 2005-08-04, ptr
+using ::jmp_buf;
+#  endif
+#  ifndef _STLP_NO_CSTD_FUNCTION_IMPORTS
+#   ifndef setjmp
+#    if !defined(__MSL__) || ((__MSL__ > 0x7001) && (__MSL__ < 0x8000))
+#     ifndef _STLP_NATIVE_SETJMP_H_INCLUDED
 using _STLP_VENDOR_CSTD::setjmp;
+#     else
+using ::setjmp;
+#     endif
+#    endif
+#   endif
+#   ifndef _STLP_NATIVE_SETJMP_H_INCLUDED
+using _STLP_VENDOR_CSTD::longjmp;
+#   else  
+using ::longjmp;
 #   endif
 #  endif
-using _STLP_VENDOR_CSTD::longjmp;
-# endif
 _STLP_END_NAMESPACE
-#endif /* _STLP_IMPORT_VENDOR_CSTD */
+# endif /* _STLP_IMPORT_VENDOR_CSTD */
 
 # if (_STLP_OUTERMOST_HEADER_ID == 0x111 )
 #  include <stl/_epilog.h>
